--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
 * {
     border: 1px solid red;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    display: flex; 
+    font-family: sans-serif;
+    flex-direction: column;
+    background-color: rgb(220, 215, 205);
+    min-height: 100vh;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+.container.header, .container.footer {
+    background-color: rgb(170, 45, 45);
+}
+
+.text.header {
+    font-size: 32px;
+    font-weight: 800;
+    padding: 10px;
+}
+
+.container.main {
+    background-color: rgb(220, 215, 205);
+    flex-direction: column;
+    flex: 1;
+}
+
+.footer {
+    font-weight: 600;
+    font-size: 16px;
+    padding: 8px;
 }
