--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -11,6 +11,7 @@ body {
     flex-direction: column;
     background-color: rgb(220, 215, 205);
     min-height: 100vh;
+    justify-content: space-between;
 }
 
 .container {
@@ -30,8 +31,40 @@ body {
 
 .container.main {
     background-color: rgb(220, 215, 205);
+}
+
+.container.calculator {
+    flex: 0 1 400px;
+    align-self: center;
+    border: 2px solid black;
     flex-direction: column;
-    flex: 1;
+    margin: 20px;
+}
+
+.container.calculator-display {
+    flex: 1 1 100px;
+    border: 1px solid black;
+    font-size: 300%;
+}
+
+.container.calculator-sign-display{
+    flex: 1 1 0;
+    background-color: white;
+}
+.container.calculator-main-display{
+    flex: 10 10 5px;
+    background-color: white;
+}
+
+.container.calculator-row {
+    flex: 1 1 100px;
+}
+
+.button.calculator-button {
+    flex: 1 1 0;
+    border: 1px solid black;
+    font-size: 250%;
+    padding: 4px;
 }
 
 .footer {
