--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-    /* border: 1px solid red; */
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -34,36 +33,42 @@ body {
 }
 
 .container.calculator {
-    flex: 0 1 400px;
+    flex: 0 1 300px;
     align-self: center;
-    border: 2px solid black;
+    border: 4px solid black;
     flex-direction: column;
     margin: 20px;
 }
 
 .container.calculator-display {
-    flex: 1 1 100px;
-    border: 1px solid black;
-    font-size: 300%;
+    flex: 1 1 75px;
+    border: 2px solid black;
+    font-size: 250%;
 }
 
 .container.calculator-sign-display{
     flex: 1 1 0;
     background-color: white;
+    align-items: center;
+    padding-left: 8px;
 }
+
 .container.calculator-main-display{
     flex: 10 10 5px;
     background-color: white;
+    align-items: center;
+    justify-content: right;
+    padding: 0px 8px;
 }
 
 .container.calculator-row {
-    flex: 1 1 100px;
+    flex: 1 1 75px;
 }
 
 .button.calculator-button {
     flex: 1 1 0;
     border: 1px solid black;
-    font-size: 250%;
+    font-size: 200%;
     padding: 4px;
 }
 
